--- a/style.css
+++ b/style.css
@@ -8,20 +8,41 @@ h1 {
 }
 
 #board {
-    width: 100%;
+    max-width: 90%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    margin: auto;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 16.66%;
+}
+
+.tile-container {
+    width: 16.66%;
+    height: auto;
+    margin: 2%;
+    aspect-ratio: 1;
 }
 
 .tile {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 16.66%;
+    width: 100%;
+    height: 100%;
     padding: 1%;
     border: 1vw solid black;
-    border-radius: 20%;
-    aspect-ratio: 1/1;
+    border-radius: 25%;
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
