--- a/style.css
+++ b/style.css
@@ -9,40 +9,63 @@ h1 {
 
 #board {
     max-width: 90%;
-    max-height: 100%;
+    max-height: 100vh;
     width: auto;
     height: auto;
     margin: auto;
+    aspect-ratio: 1;
 }
 
-.row {
+#board .row {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 16.66%;
+    margin-top: 3vh;
 }
 
-.tile-container {
+#board .tile-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 16.66%;
     height: auto;
-    margin: 2%;
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
     aspect-ratio: 1;
 }
 
-.tile {
+#board .tile {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 1%;
     border: 1vw solid black;
     border-radius: 25%;
 }
 
-img {
+.tile img {
     max-width: 100%;
     max-height: 100%;
     width: auto;
     height: auto;
+}
+
+@media only screen and (min-width: 768px) {
+    #board {max-width: 45%;}
+    #board .row {margin-top: 1.2vh;}
+    #board .tile {border: 0.4vw solid black;}
+}
+
+@media only screen and (min-width: 768px) {
+    #board {max-width: 45%;}
+    #board .row {margin-top: 1.1vh;}
+    #board .tile {border: 0.4vw solid black;}
+}
+
+@media only screen and (min-width: 2560px) {
+    #board {max-width: 35%;}
+    #board .row {margin-top: 0.5vh;}
+    #board .tile {border: 0.3vw solid black;}
 }
