--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@ h1 {
     text-align: center;
 }
 
+#highscore-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#highscore-container > * {
+    margin: 0.5vw;
+    font-size: 5vw;
+}
+
 #score-container {
     display: flex;
     justify-content: center;
@@ -56,7 +67,7 @@ h1 {
     height: 100%;
     border: 1vw solid black;
     border-radius: 25%;
-    transition: transform 0.6s;
+    transition: transform 0.5s;
     transform-style: preserve-3d;
 }
 
@@ -86,6 +97,18 @@ h1 {
     height: auto;
 }
 
+#start-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#start-container button {
+    font-size: 5vw;
+}
+
 .not-clickable {
     pointer-events: none;
 }
@@ -93,9 +116,11 @@ h1 {
 @media only screen and (min-width: 768px) {
     h1 {font-size: 5vw;}
     #score-container > * {font-size: 2vw;}
+    #highscore-container > * {font-size: 3vw;}
     #board {max-width: 45%;}
     #board .row {margin-top: 1.1vh;}
     #board .tile {border: 0.4vw solid black;}
+    #start-container button {font-size: 3vw;}
 }
 
 @media only screen and (min-width: 2560px) {
