--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ html {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-main {
-    height: 100vh;
+body {
+    margin: 0;
 }
 
 h1 {
@@ -26,6 +26,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -1vw;
+    margin-bottom: -1vw;
 }
 
 #score-container > * {
@@ -117,8 +119,8 @@ h1 {
     h1 {font-size: 5vw;}
     #score-container > * {font-size: 2vw;}
     #highscore-container > * {font-size: 3vw;}
-    #board {max-width: 45%;}
-    #board .row {margin-top: 1.1vh;}
+    #board {max-width: 44%;}
+    #board .row {margin-top: 1vh;}
     #board .tile {border: 0.4vw solid black;}
     #start-container button {font-size: 3vw;}
 }
