--- a/footer-style.css
+++ b/footer-style.css
@@ -1,20 +1,21 @@
 footer {
+    flex-grow: 1;
     background-color: rgb(133, 120, 133);
     width: 100%;
-    height: 20vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 15vh;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
+    padding-top: 1.5vw;
+    padding-bottom: 1.5vw;
 }
 
 footer p {
-    font-size: 2vw;
+    font-size: 3.5vw;
     margin-top: 0;
-    margin-bottom: 1vh;
+    margin-bottom: 0.5vh;
     color: rgb(255, 255, 255);
 }
 
@@ -33,7 +34,7 @@ footer a {
 
 footer a p {
     margin-bottom: 0;
-    font-size: 1.2vw;
+    font-size: 2.5vw;
     color: rgb(255, 255, 255);
 }
 
@@ -43,3 +44,7 @@ footer img {
     height: auto;
 }
 
+@media only screen and (min-width: 768px) {
+    footer p {font-size: 2vw;}
+    footer a p {font-size: 1.2vw;}
+}
